# gRPC_example

./: CMakeLists.txt  README.md
cmake/: FindgRPC.cmake
config/: stock_db.json  weather_db.json
protos/: CMakeLists.txt  chat.proto  service.proto  soccer.proto  stock.proto  weather.proto
src/: CMakeLists.txt  main.cpp
src/ChatService/: CMakeLists.txt  ChatService_client.cpp  ChatService_server.cpp  SingleChatService_client.cpp  SingleChatService_server.cpp
src/GetWeather/: CMakeLists.txt  GetWeather_client.cpp  GetWeather_server.cpp
src/StockPriceTrend/: CMakeLists.txt  StockPriceTrend_client.cpp  StockPriceTrend_server.cpp
